Added updateBinaryRepresentationScreen function